<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_addMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:padding="5dp"
        android:text="@string/add_movie_info"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/add_img"
        android:layout_width="106dp"
        android:layout_height="118dp"
        android:layout_gravity="center"
        android:padding="5dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_addTitle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#E2E2E2"
        android:gravity="center"
        android:padding="2.5dp"
        android:text="@string/movie_title"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_addTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="직접 입력하세요."
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_addActor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#E2E2E2"
        android:gravity="center"
        android:padding="2.5dp"
        android:text="@string/movie_actor"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_addActor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="직접 입력하세요."
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_addDirector"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#E2E2E2"
        android:gravity="center"
        android:padding="2.5dp"
        android:text="@string/movie_director"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_addDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="직접 입력하세요."
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_addRated"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#E2E2E2"
        android:gravity="center"
        android:padding="2.5dp"
        android:text="@string/movie_rated"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_addRated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="직접 입력하세요."
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_addTime"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#E2E2E2"
        android:gravity="center"
        android:padding="2.5dp"
        android:text="@string/movie_time"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_addTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="직접 입력하세요."
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_AddMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="추가" />

        <Button
            android:id="@+id/btn_AddCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="취소" />
    </LinearLayout>

</LinearLayout>